# slm-builder

./: .aider.conf.yml  .aiderignore  .gitignore  CLAUDE.md  README.md  aider_config.yaml
backend/: README.md  main.py  pyproject.toml
backend/data/: slm_builder.db
backend/slm_builder_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: __init__.py  database.py
backend/src/routers/: __init__.py  models.py  pipelines.py  rag.py  vector_stores.py
backend/src/schemas/: __init__.py  schemas.py
backend/src/services/: __init__.py  chunking.py  embeddings.py  ollama.py  rag_orchestrator.py  vector_stores.py
backend/src/slm_builder_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/tests/: test_api.py
docs/: AIDER_CONTEXT.md  AIDER_DETAILED_PLAN.md  AIDER_EXECUTION_GUIDE.md  AIDER_QUICK_REFERENCE.md  AIDER_SESSION_PLAN.md  AI_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  BACKLOG.md  CURRENT_TASK.md  SPRINT_PLANS.md
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.css  app.component.html  app.component.ts
