[project]
name = "slm-builder-backend"
version = "0.1.0"
description = "Backend for SLM Builder - A drag-and-drop interface for building Small Language Models"
authors = [{name = "Prasun Bhattacharyya"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.15",
    "pymongo>=4.6.0",
    "ollama>=0.2.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/prasun1060/slm-builder"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "black>=23.0.0"
]
